header z-index fix

--- a/less/modules/header.less
+++ b/less/modules/header.less
@@ -3,6 +3,7 @@
 header {
 	background: @header-color;
 	position: fixed;
+	z-index: 9;
 	width: 100%;
 	top: 0;
 	.flex();
